--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,11 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
 
+    implementation 'eu.davidea:flexible-adapter:5.0.0-rc4'
+    implementation 'eu.davidea:flexible-adapter-ui:1.0.0-b1'
+    implementation 'eu.davidea:flexible-adapter-livedata:1.0.0-b1'
+    implementation 'eu.davidea:flexible-adapter-databinding:1.0.0-b2'
+
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     implementation 'jp.wasabeef:glide-transformations:3.0.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
