--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,23 @@
-# Project-wide Gradle settings.
-
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
+## Project-wide Gradle settings.
+#
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
-android.databinding.enableV2=true
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+#Wed Jan 17 09:23:36 SBT 2018
+systemProp.https.proxyUser=2761oli
+systemProp.https.proxyPort=3128
+systemProp.http.proxyHost=localhost
+android.databinding.enableV2=true
+org.gradle.jvmargs=-Xmx1536m
+systemProp.https.proxyPassword=Office2017
+systemProp.https.proxyHost=localhost
+systemProp.http.proxyPort=3128
