--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,12 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
+    // RxJava support for Room
+    implementation 'android.arch.persistence.room:rxjava2:1.0.0'
+
+    // Testing support
+    androidTestImplementation 'android.arch.core:core-testing:1.0.0'
+
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
