--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="firebaseauthcom.example.orlanth23.roomsample">
+    package="nc.opt.mobile.optmobile">
 
     <uses-feature android:name="android.hardware.camera" />
 
@@ -28,7 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.MainActivity" />
+        <activity android:name=".ui.activity.MainActivity"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".ui.activity.AddColisActivity"
             android:parentActivityName=".ui.activity.MainActivity"
