--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation "com.android.support:cardview-v7:${supportLibraryVersion}"
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support:support-vector-drawable:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
