--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:required="true" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -28,8 +29,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.MainActivity"
-            android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".ui.activity.MainActivity"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.activity.AddColisActivity"
             android:parentActivityName=".ui.activity.MainActivity"
@@ -51,6 +53,11 @@
             android:name=".job.SyncColisService"
             android:exported="false" />
 
+        <activity
+            android:name=".ui.activity.IntroActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_intro"
+            android:theme="@style/SplashTheme"/>
     </application>
 
 </manifest>
