--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'com.android.support:support-v4:27.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
+    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
     implementation "android.arch.persistence.room:runtime:1.0.0"
     implementation "android.arch.paging:runtime:1.0.0-alpha4-1"
     implementation 'android.arch.lifecycle:extensions:1.0.0'
