--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 ext {
-    supportLibraryVersion = '27.0.2'
+    supportLibraryVersion = '27.1.1'
 }
 
 android {
     compileSdkVersion 27
     dataBinding {
-        enabled = true
+        enabled = false
     }
     defaultConfig {
         vectorDrawables {
@@ -44,29 +44,29 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
     implementation "com.android.support:recyclerview-v7:${supportLibraryVersion}"
     implementation "com.android.support:design:${supportLibraryVersion}"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation "com.android.support:cardview-v7:${supportLibraryVersion}"
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.android.support:support-vector-drawable:27.0.2'
-    implementation 'com.android.support:support-v4:27.0.2'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation "com.android.support:design:${supportLibraryVersion}"
+    implementation "com.android.support:support-vector-drawable:${supportLibraryVersion}"
+    implementation "com.android.support:support-v4:${supportLibraryVersion}"
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    implementation "android.arch.paging:runtime:1.0.0-alpha4-1"
-    implementation 'android.arch.lifecycle:extensions:1.0.0'
-    testImplementation "android.arch.core:core-testing:1.0.0"
-    testImplementation "android.arch.persistence.room:testing:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation "android.arch.paging:runtime:1.0.1"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    testImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation "android.arch.persistence.room:testing:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
     implementation 'eu.davidea:flexible-adapter:5.0.0-rc4'
     implementation 'eu.davidea:flexible-adapter-ui:1.0.0-b1'
     implementation 'eu.davidea:flexible-adapter-livedata:1.0.0-b1'
     implementation 'eu.davidea:flexible-adapter-databinding:1.0.0-b2'
 
-    implementation 'com.github.bumptech.glide:glide:4.4.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.2'
@@ -76,27 +76,27 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
     // RxJava support for Room
-    implementation 'android.arch.persistence.room:rxjava2:1.0.0'
+    implementation 'android.arch.persistence.room:rxjava2:1.1.1'
 
     // Testing support
-    androidTestImplementation 'android.arch.core:core-testing:1.0.0'
+    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     // LeakCanary
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 
     implementation 'com.caverock:androidsvg:1.2.1'
 
-    implementation 'com.evernote:android-job:1.2.0'
+    implementation 'com.evernote:android-job:1.2.5'
 
     implementation 'org.jsoup:jsoup:1.10.3'
 
     testImplementation 'junit:junit:4.12'
 
     // Firebase
-    implementation 'com.google.android.gms:play-services-auth:11.8.0'
-    implementation 'com.google.android.gms:play-services-vision:11.8.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'com.google.android.gms:play-services-vision:15.0.2'
 }
