--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 ext {
-    supportLibraryVersion = '28.0.0-rc01'
+    supportLibraryVersion = '28.0.0-rc02'
 }
 
 android {
@@ -36,6 +36,17 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+
+    flavorDimensions "version"
+
+    productFlavors {
+        complete {
+            dimension "version"
+        }
+        opt {
+            dimension "version"
+        }
+    }
 }
 
 dependencies {
@@ -44,7 +55,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
     implementation "com.android.support:recyclerview-v7:${supportLibraryVersion}"
     implementation "com.android.support:design:${supportLibraryVersion}"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:cardview-v7:${supportLibraryVersion}"
     implementation "com.android.support:design:${supportLibraryVersion}"
     implementation "com.android.support:support-vector-drawable:${supportLibraryVersion}"
