--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 ext {
-    supportLibraryVersion = '28.0.0-rc02'
+    supportLibraryVersion = '28.0.0'
 }
 
 android {
@@ -36,17 +36,6 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
-
-    flavorDimensions "version"
-
-    productFlavors {
-        complete {
-            dimension "version"
-        }
-        opt {
-            dimension "version"
-        }
-    }
 }
 
 dependencies {
@@ -60,54 +49,42 @@ dependencies {
     implementation "com.android.support:design:${supportLibraryVersion}"
     implementation "com.android.support:support-vector-drawable:${supportLibraryVersion}"
     implementation "com.android.support:support-v4:${supportLibraryVersion}"
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
     implementation "android.arch.persistence.room:runtime:1.1.1"
     implementation "android.arch.paging:runtime:1.0.1"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-    testImplementation "android.arch.core:core-testing:1.1.1"
-    testImplementation "android.arch.persistence.room:testing:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-
     implementation 'eu.davidea:flexible-adapter:5.0.0-rc4'
     implementation 'eu.davidea:flexible-adapter-ui:1.0.0-b1'
     implementation 'eu.davidea:flexible-adapter-livedata:1.0.0-b1'
     implementation 'eu.davidea:flexible-adapter-databinding:1.0.0-b2'
-
     implementation 'com.github.bumptech.glide:glide:4.7.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.2'
-
     implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-
-    // RxJava support for Room
     implementation 'android.arch.persistence.room:rxjava2:1.1.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.caverock:androidsvg:1.2.1'
+    implementation 'com.evernote:android-job:1.2.5'
+    implementation 'org.jsoup:jsoup:1.10.3'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.google.android.gms:play-services-vision:16.2.0'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation "android.arch.persistence.room:testing:1.1.1"
 
     // Testing support
     androidTestImplementation 'android.arch.core:core-testing:1.1.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     // LeakCanary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
-
-    implementation 'com.caverock:androidsvg:1.2.1'
-
-    implementation 'com.evernote:android-job:1.2.5'
-
-    implementation 'org.jsoup:jsoup:1.10.3'
-
-    testImplementation 'junit:junit:4.12'
-
-    // Firebase
-    implementation 'com.google.android.gms:play-services-auth:16.0.0'
-    implementation 'com.google.android.gms:play-services-vision:15.0.2'
 }
