--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,20 @@ buildscript {
     repositories {
         google()
         maven {
-            url 'https://maven.google.com'
+            url "https://maven.google.com"
+        }
+        maven {
+            url "https://clojars.org/repo/"
+        }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
         }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
-
+        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.google.gms:google-services:4.1.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
