--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,11 @@
 
         <activity
             android:name=".ui.activity.MainActivity"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.activity.AddColisActivity"
             android:parentActivityName=".ui.activity.MainActivity"
@@ -34,7 +38,7 @@
         </activity>
         <activity
             android:name=".barcodreader.BarcodeCaptureActivity"
-            android:label="Read Barcode"
+            android:label="Lecture barcode"
             android:parentActivityName=".ui.activity.AddColisActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -49,7 +53,7 @@
             android:name=".ui.activity.IntroActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_intro"
-            android:theme="@style/SplashTheme"/>
+            android:theme="@style/SplashTheme" />
         <activity
             android:name=".ui.activity.SplashActivity"
             android:theme="@style/SplashTheme">
